--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,19 +10,19 @@
     tools:showIn="@layout/activity_main">
 
     <RelativeLayout
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <Button android:id="@+id/takeSurveyButton"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
-                android:text="Take Surveys, Earn Free Gems!"
+                android:text="Take Surveys!"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
     </RelativeLayout>
+
+
 
 
 
